# target-bot

./: .gitignore  Makefile  README.md  pyproject.toml
target_bot/: custom_filters.py  main.py  phrases.py
